1.8.7

* Added "Clear Feed" option.
* Version information will be read from pkg_resources if possible.
* Cleared up documentation on configuration settings..
* Performance improvements to ``Client.send()``.
* Added default 404/500 pages.
* Added support for Django's LOGIN_URL setting.

1.8.6.2

* Reverted change which required distribute.
* Cleaned up configuration defaults.

1.8.6.1

* Include distribute_setup.py in the MANIFEST to ship it in sdists.

1.8.6

* Corrected an issue which was causing certain settings (like WEB_HOST) to
  not take affect in custom configuration files.
* The Sentry server will now pull in default server settings, as well as
  ~/.sentry/sentry.conf.py if --config is not passed to it.

1.8.5.1

* Fixed a bug which caused thrashing prevention to not function correctly.
* Corrected an error in transform()'s recursion safety.
* Changed packaging to use Distribute.

1.8.5

* Pulled test suite out of the Sentry namespace to avoid conflicts in projects.

1.8.4.2

* Added missing invalid_message_id template.

1.8.4.1

* Fixed an error that was causing LOG_LEVELS to not display correctly.

1.8.4

* The Sentry base client will now pass along the timestamp from when the
  message was generated.

1.8.3.1

* Fixed a case where the client may hit a transaction aborted error when
  transforming variables.

1.8.3

* Added several settings which were Django specific so that they can be
  configured isolated to the Sentry instance.
* Graceful failover for when a cache backend isnt working properly and
  throttling is enabled.
* Better rendering of non-dict variables when passed within extra data.
* Graceful failover for searching on message_id's that aren't found.

1.8.0

* Refactored Sentry server to run standalone (sentry --help).

1.7.5

* Implemented new client/server storage API and signing methods.
* Fixed a bug where accessing __sentry__ would sometimes cause errors on
  certain code paths.

1.7.4

* Fixed a bug with potential recursion issues.